2012-07-05  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* interopProvider.c, sfcCustomLib.c, support.c:
	[ 3538858 ] custom routine to log indInst objinfo

2012-07-02  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* internalProvider.c, providerMgr.c:
	[ 1901737 ] Memory leak in internalProvider.c

	* test/TestProviders/cmpiTestInstanceProvider.c:
        [ 3539555 ] Memory leak in TestInstanceProvider

	* providerDrv.c:
	[ 3539557 ] Memory leak in providerDrv with property list

	* indCIMXMLHandler.c:
	[ 3539563 ] Memory leak in indCIMXMLHandler when Reliable Inds Enabled

	* interopProvider.c:
	[ 3539569 ] Leaks in interopProvider

2012-06-28  Narasimha Sharoff  <nsharoff@us.ibm.com>
	* cimslpCMPI.c:
	[ 3538848 ] compile error in cimslpCMPI.c:291

2012-06-21  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* cimcClientSfcbLocal.c, cimXmlRequest.c, interopProvider.c,
	  providerDrv.c, queryOperation.h, queryStatement.c,
	  selectexp.c:
	[ 3532494 ] interopProvider not honoring SourceNamespaces[] correctly

2012-06-20  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* test/TestProviders/cmpiTestIndicationProvider.c,
	test/TestProviders/tests/IndRetryTest.sh,
	test/TestProviders/tests/IndTest1CreateFilter.xml,
	test/schema/root/interop/Test_Indication.reg,
	schema/root/interop2/Test_Indication.mof,
	test/stageschema.sh:
	[ 3532494 ] interopProvider not honoring SourceNamespaces[] correctly
	Setting up test case for additional source namespace

2012-06-15  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimAccountPassThroughProvider.c:
	[ 3520694 ] compile errors in cimAccountPassthroughProvider.c

2012-06-14  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlParser.c:
	[ 3535313 ] xmlUnescape may access memory beyond its buffer

2012-06-13  Narasimha Sharoff  <nsharoff@us.ibm.com>

	* cimslpCMPI.c, cimXmlGen.c, cimXmlGen.h, cimXmlRequest.c,
	control.c, Makefile.am, providerMgr.h, sfcb.cfg.pre.in,
	sfcBroker.c, sfcCustomLib.c, support.c: